# VITA-Homebrew-Sorter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  dbbrowser.cpp  dbbrowser.h
.github/workflows/: build.yml
include/: applist.h  config.h  fs.h  gui.h  imgui_impl_vitagl.h  keyboard.h  loadouts.h  log.h  power.h  sqlite.h  sqlite3.h  tabs.h  textures.h  utils.h
libs/imgui/: imconfig.h  imgui_impl_vitagl.cpp  imgui_impl_vitagl.h  imstb_truetype.h
libs/libsqlite/: .editorconfig  .gitattributes  .gitignore  README.md  sqlite.c
libs/libsqlite/libsqlite/: sqlite.h
libs/libsqlite/sample/: console.c  console.h  draw.c  font_data.c  sqlite_demo.c
sce_sys/livearea/contents/: template.xml
source/: applist.cpp  config.cpp  fs.cpp  gui.cpp  imgui_impl_vitagl.cpp  keyboard.cpp  loadouts.cpp  log.cpp  main.cpp  power.cpp  sqlite.cpp  textures.cpp  utils.cpp
source/tabs/: loadouts.cpp  pages.cpp  settings.cpp  sort.cpp
